--- a/src/components/Header/header.styles.module.scss
+++ b/src/components/Header/header.styles.module.scss
@@ -28,14 +28,13 @@
         &:hover{
           color: var(--gray-100);
         }
+        &.active{
+          color: var(--rose-500);
+          font-weight: bold;
+        }
     }
-    
-     
       
-      &.active{
-        color: var(--rose-500);
-        font-weight: bold;
-      }
+      
     }
 }
 
@@ -47,9 +46,11 @@
   padding: 0.5rem 1.5rem;
   font-weight: bold;
   color: var(--white);
-  transition: filter 0.2s;
+  transition: all 0.2s;
+
   &:hover{
-    filter: brightness(1.1)
+    filter: brightness(1.3);
+    transform: scale(1.01);
   }
 }
 
