--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -48,3 +48,18 @@ a{
   max-width: 1128px;
   margin: 0 auto;
 }
+
+.button{
+  border-radius: 6px;
+  background: var(--rose-900);
+  color: var(--white);
+  border: 0;
+  font-weight: bold;
+  transition: all 0.2s;
+  padding: 1rem 1.8rem;
+
+  &:hover{
+    filter: brightness(1.3);
+    transform: scale(1.01);
+  }
+}
