--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -26,9 +26,10 @@
     font-size: 1rem;
     line-height: 2.25rem;
     color: var(--white);
+    margin-bottom: 1.5rem;
   }
-  button{
-    margin-top: 1.5rem;
+  a{
+    align-self: flex-start;
   }
 }
 
