--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -182,3 +182,19 @@
     }
   }
 }
+
+@media(max-width: 585px ){
+    .sectionCTA{
+      img{
+        margin-top: 30px;
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+      }
+    }
+    .sectionContent{
+        img{
+          max-width: 300px;
+        }
+    }
+}
